fix: Footer content and feature-in logo centered on mobile (#26)
* fix: change link address in footer

* fix: center featured logos on mobile

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1303,7 +1303,7 @@ Imaging with any questions regarding Web Fonts:  http://www.fonts.com
     .c-proof {
       padding: 10em 0; } }
   .c-proof__featured {
-    width: 90%;
+    width: 80%;
     margin: 0 auto; }
     @media (min-width: 40em) {
       .c-proof__featured {
@@ -1316,7 +1316,8 @@ Imaging with any questions regarding Web Fonts:  http://www.fonts.com
         width: 60%; } }
   .c-proof__logo {
     display: block;
-    margin: 2em auto; }
+    margin: 4em auto;
+    width: 40%; }
     @media (min-width: 40em) {
       .c-proof__logo {
         float: left;
@@ -1366,18 +1367,21 @@ Imaging with any questions regarding Web Fonts:  http://www.fonts.com
         width: 25%;
         margin-left: 18%; } }
 
-#c-proof__logo--how {
-  width: 14%;
-  margin-top: 5.5%;
-  margin-right: 15%; }
+@media (min-width: 40em) {
+  #c-proof__logo--how {
+    width: 14%;
+    margin-top: 5.5%;
+    margin-right: 15%; } }
 
-#c-proof__logo--scholastic {
-  width: 32%;
-  margin-top: 8%;
-  margin-right: 15%; }
+@media (min-width: 40em) {
+  #c-proof__logo--scholastic {
+    width: 32%;
+    margin-top: 8%;
+    margin-right: 15%; } }
 
-#c-proof__logo--nyt {
-  width: 24%; }
+@media (min-width: 40em) {
+  #c-proof__logo--nyt {
+    width: 24%; } }
 
 .c-buy {
   background-color: #F26531;
