--- a/src/scss/_proof.scss
+++ b/src/scss/_proof.scss
@@ -6,7 +6,7 @@
   overflow: hidden; //hide svg elements which extend to the right
 
   &__featured {
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 
     @media (min-width: $bp-b) {
@@ -24,7 +24,8 @@
 
   &__logo {
     display: block;
-    margin: 2em auto;
+    margin: 4em auto;
+    width: 40%;
 
     @media (min-width: $bp-b) {
       float: left;
@@ -92,17 +93,23 @@
 }
 
 #c-proof__logo--how {
-  width: 14%;
-  margin-top: 5.5%;
-  margin-right: 15%;
+  @media (min-width: $bp-b) {
+    width: 14%;
+    margin-top: 5.5%;
+    margin-right: 15%;
+  }
 }
 
 #c-proof__logo--scholastic {
-  width: 32%;
-  margin-top: 8%;
-  margin-right: 15%;
+  @media (min-width: $bp-b) {
+    width: 32%;
+    margin-top: 8%;
+    margin-right: 15%;
+  }
 }
 
 #c-proof__logo--nyt {
-  width: 24%;
+  @media (min-width: $bp-b) {
+    width: 24%;
+  }
 }
